# CaesbControl-Public

./: .gitignore  README.md  db.sqlite3  env_example  knn_model.joblib  manage.py  pyproject.toml  requirements.txt  scaler.joblib
api/: llm.py  urls.py  utils.py
api/serializers/: __init__.py  property.py  water_bill.py
api/views/: __init__.py  analysis.py  property.py  water_bill.py
bills/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
bills/management/commands/: create_viewer_group.py  generate_synthetic_data.py
bills/migrations/: 0001_initial.py  0002_alter_property_options.py
bills/templates/: base.html
bills/templates/bills/: bill_form.html  dashboard.html  export_bills_csv.html  property_detail.html  property_form.html  property_list.html  upload_bills_csv.html  upload_properties_csv.html
bills/templates/registration/: login.html
caesb_control/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: clean_database.py
scripts/CAESB/: dados_limpos.csv  dados_raw.csv  isolation_forest.py  knn.py  limpar_base.py  linear_regression.py  locais_ID_n.csv  locais_unicos.csv
scripts/CAESB/data/: dados_com_labels.csv
scripts/CAESB/data_processing/: analisar.py  criar_lables.py
scripts/CAESB/graficos/: knn_model.joblib  scaler.joblib
scripts/CAESB/isolation_forest_model/: isolation_forest.py  isolation_forest_results.txt
scripts/CAESB/linear_regression_model/: linear_regression.py  linear_regression_comparison.txt
scripts/CAESB/lof_model/: local_outlier_factor.py  (+1 more)
staticfiles/css/: unb-theme.css
(+10 files in other folders)
